--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="title_activity_send_file">SendFileActivity</string>
+    <string name="title_activity_receive_file">ReceiveFileActivity</string>
 </resources>
