New: Image slideshow activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_send_file">SendFileActivity</string>
     <string name="title_activity_receive_file">ReceiveFileActivity</string>
+    <string name="title_activity_play_image_slideshow">PlayImageSlideshowActivity</string>
 </resources>
