--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">QR Transfer</string>
+    <string name="app_name">QRCFTP</string>
     <string name="title_activity_send_file">Send File</string>
     <string name="title_activity_receive_file">Receive File</string>
     <string name="generatingMessage">Generating QR codes...</string>
